--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,3 +1,9 @@
 
 @import "reset";
 @import "layout";
+@import "ulit";
+@import "index";
+@import "blog";
+@import "faq";
+@import "location";
+@import "product";
